typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts:3:5
  |
3 |     [e]: number 
  |     ^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            40,
        ),
        hi: BytePos(
            41,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts:3:6
  |
3 |     [e]: number 
  |      ^

